# wordler

./: Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: daily.yml  test-action.yml
src/wordler/: __main__.py  constants.py  solver.py
tests/: test_temp.py
